--- a/app/src/main/res/layout/meme_item.xml
+++ b/app/src/main/res/layout/meme_item.xml
@@ -28,9 +28,10 @@
 
         <ImageView
             android:id="@+id/iv_meme"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="250dp" />
         <TextView
             android:id="@+id/tv_text"
             android:layout_gravity="center"
